--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Window View - See the view from any window</title>
-    <meta name="description" content="Apartment hunting? Curious about natural light? Window View lets you click on any building on a 3D globe and see the view from inside before you visit." />
+    <meta
+      name="description"
+      content="Apartment hunting? Curious about natural light? Window View lets you click on any building on a 3D globe and see the view from inside before you visit."
+    />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://wengh.github.io/window-view/" />
     <meta property="og:title" content="Window View - See the view from any window" />
-    <meta property="og:description" content="Apartment hunting? Curious about natural light? Window View lets you click on any building on a 3D globe and see the view from inside before you visit." />
-    <meta property="og:image" content="https://github.com/user-attachments/assets/a0aa1022-0f62-407a-86e0-d3a7c40fbd80" />
-
+    <meta
+      property="og:description"
+      content="Apartment hunting? Curious about natural light? Window View lets you click on any building on a 3D globe and see the view from inside before you visit."
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/user-attachments/assets/a0aa1022-0f62-407a-86e0-d3a7c40fbd80"
+    />
   </head>
   <body>
     <div id="root"></div>
